--- a/package.json
+++ b/package.json
@@ -1,4 +1,11 @@
 {
+  "name": "js-obj-meal-maker",
+  "version": "1.0.0",
+  "description": "Task to test JS object knowledge",
+  "main": "index.js",
+  "repository": "git@github.com:IT-forward/js-obj-meal-maker.git",
+  "author": "bahriddin <bahriddin.abdiev@ferocia.com.au>",
+  "license": "MIT",
   "devDependencies": {
     "@babel/preset-env": "^7.12.11",
     "babel-cli": "^6.26.0",
